# SynapseKit

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/profile/: README.md
.github/workflows/: ci.yml  publish.yml  welcome.yml
docs/: FEATURE_PARITY.md  ROADMAP.md
src/synapsekit/: __init__.py  _compat.py
src/synapsekit/agents/: __init__.py  base.py  executor.py  function_calling.py  memory.py  pii_redactor.py  react.py  registry.py  step_events.py
src/synapsekit/agents/tools/: __init__.py  arxiv_search.py  brave_search.py  calculator.py  email_tool.py  file_read.py  github_api.py  http_request.py  jira.py  pubmed_search.py  python_repl.py  regex_tool.py  shell.py  slack.py  sql_query.py  sql_schema.py  tavily_search.py  vector_search.py  web_scraper.py  web_search.py  youtube_search.py
src/synapsekit/cli/: main.py  test.py
src/synapsekit/embeddings/: backend.py
src/synapsekit/evaluation/: __init__.py  base.py  faithfulness.py  groundedness.py  pipeline.py  regression.py  relevancy.py
src/synapsekit/graph/: __init__.py  approval.py  compiled.py  dynamic_route.py  edge.py  errors.py  graph.py  mermaid.py  node.py  state.py  streaming.py  subgraph.py  trace.py
src/synapsekit/graph/checkpointers/: __init__.py  json_file.py
src/synapsekit/llm/: __init__.py  _cache.py  _filesystem_cache.py  _retry.py  _semantic_cache.py  _sqlite_cache.py  anthropic.py  base.py  bedrock.py  cerebras.py  cloudflare.py  cohere.py  cost_router.py  fallback_chain.py  gemini.py  groq.py  mistral.py  moonshot.py  ollama.py  openai.py  perplexity.py  structured.py  zhipu.py
src/synapsekit/loaders/: __init__.py  audio.py  base.py  csv.py  directory.py  docx.py  excel.py  html.py  json_loader.py  markdown.py  pdf.py  pptx.py  text.py  video.py  web.py
src/synapsekit/mcp/: __init__.py  client.py  server.py
src/synapsekit/memory/: __init__.py  buffer.py  conversation.py  entity.py  hybrid.py  sqlite.py  summary_buffer.py
src/synapsekit/observability/: __init__.py  audit_log.py  otel.py  tracer.py  ui.py
src/synapsekit/parsers/: __init__.py  json_parser.py  list_parser.py  pydantic_parser.py
src/synapsekit/prompts/: __init__.py  template.py
src/synapsekit/rag/: __init__.py  facade.py  pipeline.py
src/synapsekit/retrieval/: __init__.py  adaptive.py  base.py  chroma.py  contextual.py  contextual_compression.py  crag.py  ensemble.py  faiss.py  hybrid_search.py  hyde.py  multi_step.py  pinecone.py  qdrant.py  query_decomposition.py  retriever.py  self_rag.py  sentence_window.py  vectorstore.py
src/synapsekit/text_splitters/: __init__.py  base.py  character.py  recursive.py  semantic.py  token.py
synapsekit/: __init__.py
synapsekit/agents/: react.py
synapsekit/embeddings/: __init__.py  backend.py
synapsekit/llm/: anthropic.py  openai.py
synapsekit/loaders/: __init__.py  csv.py  directory.py  json_loader.py  text.py  web.py
synapsekit/memory/: conversation.py
synapsekit/observability/: tracer.py
synapsekit/prompts/: __init__.py  template.py
synapsekit/rag/: pipeline.py
synapsekit/retrieval/: retriever.py  vectorstore.py
tests/: test_llm.py  test_memory.py  test_rag_facade.py  test_rag_pipeline.py  test_retriever.py  test_tracer.py  test_v053_features.py  test_v060_features.py  test_v062_features.py  test_v065_features.py  test_v066_features.py  test_v068_features.py  test_v069_features.py  test_v070_features.py  test_v080_features.py  test_v100_features.py  test_v120_features.py  test_v130_eval_regression.py  test_v130_routing.py  test_vectorstore.py
tests/agents/: test_executor.py  test_function_calling.py  test_memory.py  test_pii_redactor.py  test_react.py  test_shell_tool.py  test_sql_schema.py  test_streaming_steps.py  test_tools.py
tests/graph/: test_build.py  test_json_checkpointer.py  test_mermaid.py  test_run.py  test_state.py  test_stream.py
tests/llm/: test_cache_retry.py  test_filesystem_cache.py  test_llm.py  test_providers.py
tests/loaders/: test_audio_video_loaders.py  test_docx_loader.py  test_loaders.py  test_markdown_loader.py
tests/memory/: test_memory.py
tests/observability/: test_audit_log.py  test_tracer.py
tests/parsers/: test_parsers.py
tests/prompts/: test_prompts.py
tests/rag/: test_facade.py  test_pipeline.py
tests/retrieval/: test_backends.py  test_hyde.py  test_retriever.py  test_vectorstore.py
tests/text_splitters/: test_splitters.py
