[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "synapsekit"
version = "0.1.0"
description = "Lightweight, async-first RAG framework. Streaming-native, minimal dependencies."
authors = ["Amit Nautiyal <de.amit.nautiyal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SynapseKit/SynapseKit"
repository = "https://github.com/SynapseKit/SynapseKit"
keywords = ["rag", "llm", "ai", "async", "streaming", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "synapsekit"}]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
numpy = ">=1.26"
rank-bm25 = ">=0.2.2"

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
semantic = ["sentence-transformers"]
all = ["openai", "anthropic", "sentence-transformers", "cohere"]

[tool.poetry.group.openai]
optional = true

[tool.poetry.group.openai.dependencies]
openai = ">=1.0"

[tool.poetry.group.anthropic]
optional = true

[tool.poetry.group.anthropic.dependencies]
anthropic = ">=0.25"

[tool.poetry.group.semantic]
optional = true

[tool.poetry.group.semantic.dependencies]
sentence-transformers = ">=2.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
