[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapsekit"
version = "0.4.0"
description = "Lightweight, async-first RAG framework. Streaming-native, minimal dependencies."
authors = [{ name = "Amit Nautiyal", email = "de.amit.nautiyal@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
keywords = ["rag", "llm", "ai", "async", "streaming", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/SynapseKit/SynapseKit"
Repository = "https://github.com/SynapseKit/SynapseKit"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
semantic = ["sentence-transformers>=2.7"]
pdf = ["pypdf>=4.0"]
html = ["beautifulsoup4>=4.12", "lxml>=5.0"]
web = ["httpx>=0.27", "beautifulsoup4>=4.12"]
chroma = ["chromadb>=0.5"]
faiss = ["faiss-cpu>=1.7"]
qdrant = ["qdrant-client>=1.9"]
pinecone = ["pinecone>=3.0"]
ollama = ["ollama>=0.2"]
cohere = ["cohere>=5.0"]
mistral = ["mistralai>=1.0"]
gemini = ["google-generativeai>=0.7"]
bedrock = ["boto3>=1.34"]
search = ["duckduckgo-search>=6.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.25",
    "sentence-transformers>=2.7",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "httpx>=0.27",
    "chromadb>=0.5",
    "ollama>=0.2",
    "cohere>=5.0",
    "mistralai>=1.0",
    "google-generativeai>=0.7",
    "boto3>=1.34",
    "duckduckgo-search>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hatchling",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synapsekit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
