[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapsekit"
version = "0.6.4"
description = "Async-native Python framework for building production-grade LLM applications. Streaming-first, 2 dependencies, fully transparent."
authors = [{ name = "Amit", email = "de.amit.nautiyal@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
keywords = ["rag", "llm", "ai", "async", "streaming", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/SynapseKit/SynapseKit"
Repository = "https://github.com/SynapseKit/SynapseKit"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
semantic = ["sentence-transformers>=2.7"]
pdf = ["pypdf>=4.0"]
html = ["beautifulsoup4>=4.12", "lxml>=5.0"]
web = ["httpx>=0.27", "beautifulsoup4>=4.12"]
chroma = ["chromadb>=0.5"]
faiss = ["faiss-cpu>=1.7"]
qdrant = ["qdrant-client>=1.9"]
pinecone = ["pinecone>=3.0"]
ollama = ["ollama>=0.2"]
cohere = ["cohere>=5.0"]
mistral = ["mistralai>=1.0"]
gemini = ["google-generativeai>=0.7"]
bedrock = ["boto3>=1.34"]
groq = ["groq>=0.9"]
excel = ["openpyxl>=3.1"]
pptx = ["python-pptx>=0.6"]
docx = ["python-docx>=1.0"]
http = ["aiohttp>=3.9"]
search = ["duckduckgo-search>=6.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.25",
    "sentence-transformers>=2.7",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "httpx>=0.27",
    "chromadb>=0.5",
    "faiss-cpu>=1.7",
    "qdrant-client>=1.9",
    "pinecone>=3.0",
    "ollama>=0.2",
    "cohere>=5.0",
    "mistralai>=1.0",
    "google-generativeai>=0.7",
    "boto3>=1.34",
    "duckduckgo-search>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hatchling",
    "ruff>=0.9",
    "mypy>=1.11",
    "deptry>=0.16",
    "pre-commit>=3.7",
    "pydantic>=2.12.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synapsekit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM108", "RUF022", "UP047", "RUF012", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N817", "B017"]

[tool.ruff.lint.isort]
known-first-party = ["synapsekit"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
packages = ["synapsekit"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "synapsekit.llm.openai",
    "synapsekit.llm.anthropic",
    "synapsekit.llm.ollama",
    "synapsekit.llm.cohere",
    "synapsekit.llm.mistral",
    "synapsekit.llm.gemini",
    "synapsekit.llm.bedrock",
    "synapsekit.embeddings.backend",
    "synapsekit.retrieval.chroma",
    "synapsekit.retrieval.faiss",
    "synapsekit.retrieval.qdrant",
    "synapsekit.retrieval.pinecone",
    "synapsekit.llm.groq",
    "synapsekit.llm.azure_openai",
    "synapsekit.llm.deepseek",
    "synapsekit.llm.openrouter",
    "synapsekit.llm.together",
    "synapsekit.llm.fireworks",
    "synapsekit.loaders.excel",
    "synapsekit.loaders.pptx",
]
warn_return_any = false
# from __future__ import annotations causes mypy to misinterpret
# async generator return types as Coroutine[..., AsyncGenerator]
disable_error_code = ["override"]

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.package_module_name_map]
google-generativeai = "google"
beautifulsoup4 = "bs4"
faiss-cpu = "faiss"
python-pptx = "pptx"
python-docx = "docx"

[tool.deptry.per_rule_ignores]
DEP001 = ["sqlalchemy", "pydantic", "aiohttp"]
DEP002 = ["numpy", "rank-bm25", "beautifulsoup4", "lxml", "faiss-cpu", "google-generativeai"]
DEP004 = ["pydantic"]
